--- a/notebooks/metabo_analysis.ipynb
+++ b/notebooks/metabo_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "athletic-catalyst",
+   "id": "under-harrison",
    "metadata": {},
    "source": [
     "# Prepare metabolomics data for ipath ingestion\n",
@@ -18,10 +18,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "protecting-vienna",
+   "id": "supported-consultation",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define some functions for data ingestion\n",
     "import pandas as pd\n",
     "import csv\n",
     "import requests\n",
@@ -102,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "younger-webcam",
+   "id": "casual-status",
    "metadata": {},
    "outputs": [
     {
@@ -514,6 +515,7 @@
     }
    ],
    "source": [
+    "# ingest hilic results and print total shape for comparison with cleaned data (aka only compounds with KEGG ids remain)\n",
     "hilic = parse_metabolomics_results('../raw/Results_Untargeted_Metabolomics_E14-P40_LK_Nova_results_HILIC.csv')\n",
     "print(hilic.ID.unique().shape)\n",
     "hilic, no_kegg_hilic = clean_dataframe(hilic)\n",
@@ -523,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "choice-wildlife",
+   "id": "demographic-apollo",
    "metadata": {},
    "outputs": [
     {
@@ -934,10 +936,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "metropolitan-biotechnology",
+   "id": "fossil-atmosphere",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# write the ingested data to files\n",
+    "# as raw values\n",
     "import itertools as it\n",
     "conditions = ['WT', 'KO']\n",
     "timepoints = ['E14_5', 'P2', 'P40']\n",
@@ -956,6 +960,8 @@
     "            index = False\n",
     "        )\n",
     "\n",
+    "# in a format for ingestion in iPATH\n",
+    "# this is obsolete because it only considers compounds which is not visually appealing in iPATH\n",
     "columns_wt = ['(P2, WT) / (E14_5, WT)', '(P40, WT) / (P2, WT)']\n",
     "columns_ko = ['(P2, KO) / (E14_5, KO)', '(P40, KO) / (P2, KO)']\n",
     "def write_foldchanges(df, columns, condition, prefix):\n",
@@ -1008,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "mighty-gather",
+   "id": "native-visibility",
    "metadata": {},
    "outputs": [
     {
@@ -1420,6 +1426,8 @@
     }
    ],
    "source": [
+    "# ingestion for rp results which are not yet used in the workflow\n",
+    "# since I didn't find a way to combine with hilic\n",
     "rp = parse_metabolomics_results('../raw/Results_Untargeted_Metabolomics_E14-P40_LK_Nova_results_RP.csv')\n",
     "print(rp.ID.unique().shape)\n",
     "rp, no_kegg_rp = clean_dataframe(rp)\n",
@@ -1429,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "placed-latest",
+   "id": "under-programmer",
    "metadata": {},
    "outputs": [
     {
@@ -1553,6 +1561,9 @@
     }
    ],
    "source": [
+    "# preliminary attempt to integrate with COMPASS data via EC numbers\n",
+    "# worked but didn't continue as some puzzle pieces are missing\n",
+    "# like how to compute a combined score for reaction and compounds etc.\n",
     "import requests\n",
     "def map_compounds_to_ec(compounds):\n",
     "    response = requests.get(\n",
@@ -1586,7 +1597,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "unnecessary-listing",
+   "id": "original-montana",
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1732,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "right-sullivan",
+   "id": "about-confusion",
    "metadata": {},
    "outputs": [
     {
@@ -1785,10 +1796,11 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "accessible-investing",
+   "id": "expired-president",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get KEGG pathways via KEGG API and pickle the results\n",
     "import pickle\n",
     "def parse_gene_record(gene_record):\n",
     "    # [:-1] to get rid of the trailing bracket\n",
@@ -1918,10 +1930,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dangerous-concept",
+   "id": "early-spectacular",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load pickled results from above cell\n",
     "import pickle\n",
     "with open('../raw/kegg_pathway_maps.pickle', 'rb') as handle:\n",
     "    pathwaymaps = pickle.load(handle)"
@@ -1930,10 +1943,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "regular-parameter",
+   "id": "varied-guard",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# select pathways that either are a metabolism or process information\n",
     "def select_maps(pathwaydict, class_contains):\n",
     "    selection = {}\n",
     "    for k, v in pathwaydict.items():\n",
@@ -1951,7 +1965,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "characteristic-investigation",
+   "id": "blank-cement",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2126,15 @@
     }
    ],
    "source": [
+    "# the following cells are a simple implementation of a pathway enrichment analysis\n",
+    "# based on differential abundance of compounds using Fisher's exact test\n",
     "def compute_overlaps(diff_compounds, pathways, metabolites = None):\n",
+    "    '''\n",
+    "    computes overlaps between differentially regulated compounds and \n",
+    "    each set of pathway compounds. Pathway compounds are limited to\n",
+    "    the set of compounds given by metabolites (i.e. adjustment to background\n",
+    "    aka only quantified metabolites are considered)\n",
+    "    '''\n",
     "    diff_compounds = set(diff_compounds)\n",
     "    overlaps = []\n",
     "    for key, pathway in pathways.items():\n",
@@ -2162,10 +2184,11 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "creative-vessel",
+   "id": "parallel-wesley",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pvalue computation based on hypergeometric distribution\n",
     "from scipy.stats import hypergeom\n",
     "import numpy as np\n",
     "def pvalue(k, M, n, N):\n",
@@ -2213,7 +2236,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "expensive-kuwait",
+   "id": "abstract-vaccine",
    "metadata": {},
    "outputs": [
     {
@@ -2423,6 +2446,8 @@
     }
    ],
    "source": [
+    "# M is the number of background genes and is taken from the raw excel file\n",
+    "# as this is the true background for the compounds\n",
     "M = 396\n",
     "overlaps['pvalue'] = overlaps.apply(\n",
     "    lambda x: pvalue(x.ncommon, M, x.ncompounds, len(upreg)),\n",
@@ -2435,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "seasonal-failing",
+   "id": "incomplete-market",
    "metadata": {},
    "outputs": [
     {
@@ -2690,7 +2715,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "sapphire-layer",
+   "id": "disturbed-freedom",
    "metadata": {},
    "outputs": [
     {
@@ -2760,6 +2785,8 @@
     }
    ],
    "source": [
+    "# computes the pathway enrichments and average log fold changes for enriched pathways\n",
+    "# based on differential abundance of quantified compounds\n",
     "def compute_selections(df, pathways, keggidcol, foldchange_columns, pvalue_columns, alpha = 0.05, fdr = 0.1):\n",
     "    selections = {}\n",
     "    for pvalcol, fccol in zip(pvalue_columns, foldchange_columns):\n",
@@ -2827,10 +2854,11 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "arranged-declaration",
+   "id": "waiting-glory",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reformats enrichment results from above to conform to iPATH specifications\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "coolwarm = plt.get_cmap('coolwarm')\n",
@@ -2874,10 +2902,11 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "lasting-wholesale",
+   "id": "billion-guyana",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# writing selection files\n",
     "prefix = '../raw/ipath_selection_hilic'\n",
     "for key, selection in selections.items():\n",
     "    suffix = key[1:-1] \\\n",
@@ -2903,10 +2932,11 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "innovative-treatment",
+   "id": "electric-diagnosis",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# writing base selection files\n",
     "wtbase = pd.concat(\n",
     "    [selection for key, selection in selections.items() if 'WT' in key]\n",
     ").drop_duplicates().reset_index(drop = True)\n",
@@ -2931,14 +2961,6 @@
     "        index = False\n",
     "    )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "usual-skirt",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
