norm fix also for KO vs WT

--- a/notebooks/metabo_analysis.ipynb
+++ b/notebooks/metabo_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "characteristic-farmer",
+   "id": "similar-castle",
    "metadata": {},
    "source": [
     "# Prepare metabolomics data for ipath ingestion\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "connected-cholesterol",
+   "id": "considerable-gallery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "characteristic-honey",
+   "id": "corresponding-knight",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "pharmaceutical-cambridge",
+   "id": "statutory-present",
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "annoying-weapon",
+   "id": "hundred-treasury",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "irish-registrar",
+   "id": "authorized-buddy",
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "behind-chain",
+   "id": "tired-advocate",
    "metadata": {},
    "outputs": [
     {
@@ -1597,7 +1597,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "diagnostic-ballet",
+   "id": "several-absorption",
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2014,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "increased-cause",
+   "id": "defensive-cabin",
    "metadata": {},
    "outputs": [
     {
@@ -2149,7 +2149,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "christian-reliance",
+   "id": "modular-supplier",
    "metadata": {},
    "outputs": [
     {
@@ -2213,7 +2213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "banner-wellington",
+   "id": "heard-literacy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2347,7 +2347,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "persistent-filter",
+   "id": "complete-accident",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2360,7 +2360,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "neither-steps",
+   "id": "addressed-mumbai",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2382,7 +2382,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "sunrise-assault",
+   "id": "hidden-navigator",
    "metadata": {},
    "outputs": [
     {
@@ -2601,7 +2601,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "little-updating",
+   "id": "interesting-margin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2653,7 +2653,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "organizational-charter",
+   "id": "white-blackjack",
    "metadata": {},
    "outputs": [
     {
@@ -2877,7 +2877,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "recorded-medicine",
+   "id": "prospective-insertion",
    "metadata": {},
    "outputs": [
     {
@@ -3188,7 +3188,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "specialized-participant",
+   "id": "described-rebate",
    "metadata": {},
    "outputs": [
     {
@@ -3327,7 +3327,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "parental-shape",
+   "id": "english-archives",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3394,7 +3394,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "third-stamp",
+   "id": "confident-thursday",
    "metadata": {},
    "outputs": [
     {
@@ -3437,7 +3437,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "thermal-howard",
+   "id": "fatty-reminder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3469,7 +3469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naked-assembly",
+   "id": "nutritional-pottery",
    "metadata": {},
    "source": [
     "# Integration with scRNAseq and proteomics data"
@@ -3477,8 +3477,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "seasonal-tuesday",
+   "execution_count": 26,
+   "id": "signal-virus",
    "metadata": {},
    "outputs": [
     {
@@ -4640,7 +4640,7 @@
        "162554                3   neurons  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4691,8 +4691,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "clean-martial",
+   "execution_count": 27,
+   "id": "accepting-princeton",
    "metadata": {},
    "outputs": [
     {
@@ -4703,32 +4703,32 @@
        "    layers: 'counts'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "adata.layers['counts'] = adata.X.astype(int).copy()\n",
-    "sc.pp.normalize_total(adata)\n",
+    "sc.pp.normalize_total(adata, target_sum = 1e4)\n",
     "adata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "regular-individual",
+   "execution_count": 28,
+   "id": "pressed-excellence",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_49197/1945058940.py:6: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "/tmp/ipykernel_22158/1945058940.py:6: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  'lfc_rna': np.log2(ko/wt)\n",
-      "/tmp/ipykernel_49197/1945058940.py:6: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/tmp/ipykernel_22158/1945058940.py:6: RuntimeWarning: invalid value encountered in true_divide\n",
       "  'lfc_rna': np.log2(ko/wt)\n",
-      "/tmp/ipykernel_49197/1945058940.py:6: RuntimeWarning: divide by zero encountered in log2\n",
+      "/tmp/ipykernel_22158/1945058940.py:6: RuntimeWarning: divide by zero encountered in log2\n",
       "  'lfc_rna': np.log2(ko/wt)\n"
      ]
     },
@@ -4771,7 +4771,7 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>Gm6123</td>\n",
-       "      <td>0.947214</td>\n",
+       "      <td>0.947215</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -4796,12 +4796,12 @@
        "    <tr>\n",
        "      <th>26245</th>\n",
        "      <td>mt-Te</td>\n",
-       "      <td>-0.155918</td>\n",
+       "      <td>-0.155917</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26246</th>\n",
        "      <td>mt-Cytb</td>\n",
-       "      <td>0.194500</td>\n",
+       "      <td>0.194501</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26247</th>\n",
@@ -4822,20 +4822,20 @@
        "      genesymbol   lfc_rna\n",
        "5        Gm38148 -0.619308\n",
        "14        Gm6085 -0.695657\n",
-       "16        Gm6123  0.947214\n",
+       "16        Gm6123  0.947215\n",
        "17        Mrpl15 -0.626928\n",
        "18        Lypla1  0.115159\n",
        "...          ...       ...\n",
        "26244     mt-Nd6 -0.103994\n",
-       "26245      mt-Te -0.155918\n",
-       "26246    mt-Cytb  0.194500\n",
+       "26245      mt-Te -0.155917\n",
+       "26246    mt-Cytb  0.194501\n",
        "26247      mt-Tt -1.862060\n",
        "26248      mt-Tp  0.077618\n",
        "\n",
        "[14221 rows x 2 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4855,8 +4855,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "reserved-abuse",
+   "execution_count": 29,
+   "id": "dying-queen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4900,7 +4900,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "athletic-perspective",
+   "id": "institutional-enemy",
    "metadata": {},
    "outputs": [
     {
@@ -5061,7 +5061,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "greater-debut",
+   "id": "substantial-ideal",
    "metadata": {},
    "outputs": [
     {
@@ -5192,7 +5192,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "secondary-subsection",
+   "id": "collectible-second",
    "metadata": {},
    "outputs": [
     {
@@ -5327,7 +5327,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "directed-sheffield",
+   "id": "curious-tourism",
    "metadata": {},
    "outputs": [
     {
@@ -5475,7 +5475,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "another-conspiracy",
+   "id": "collective-consistency",
    "metadata": {},
    "outputs": [
     {
@@ -5975,7 +5975,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "sudden-professor",
+   "id": "invisible-spain",
    "metadata": {},
    "outputs": [
     {
@@ -6033,7 +6033,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "agricultural-minutes",
+   "id": "owned-welding",
    "metadata": {},
    "outputs": [
     {
@@ -6406,7 +6406,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "future-recipient",
+   "id": "duplicate-words",
    "metadata": {},
    "outputs": [
     {
@@ -6809,7 +6809,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "threaded-buffalo",
+   "id": "numerous-parker",
    "metadata": {},
    "outputs": [
     {
@@ -7054,7 +7054,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "distinguished-gender",
+   "id": "functioning-mailing",
    "metadata": {},
    "outputs": [
     {
@@ -7103,7 +7103,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "joined-monkey",
+   "id": "dominant-volume",
    "metadata": {},
    "outputs": [
     {
@@ -7501,7 +7501,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "distant-puzzle",
+   "id": "present-gallery",
    "metadata": {},
    "outputs": [
     {
@@ -7645,7 +7645,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "higher-martin",
+   "id": "rocky-consensus",
    "metadata": {},
    "outputs": [
     {
@@ -7804,7 +7804,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "available-lewis",
+   "id": "demonstrated-armstrong",
    "metadata": {},
    "outputs": [
     {
@@ -7880,7 +7880,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "desperate-river",
+   "id": "precious-marker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7897,7 +7897,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "supported-things",
+   "id": "greatest-desire",
    "metadata": {},
    "outputs": [
     {
@@ -8019,7 +8019,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "dominant-america",
+   "id": "second-addiction",
    "metadata": {},
    "outputs": [
     {
@@ -8156,7 +8156,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "precise-folder",
+   "id": "wired-brother",
    "metadata": {},
    "outputs": [
     {
@@ -8285,7 +8285,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "focal-librarian",
+   "id": "breeding-overhead",
    "metadata": {},
    "outputs": [
     {
@@ -8407,7 +8407,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "adopted-trout",
+   "id": "recreational-philip",
    "metadata": {},
    "outputs": [
     {
@@ -8441,7 +8441,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "collected-cleanup",
+   "id": "native-combat",
    "metadata": {},
    "outputs": [
     {
@@ -8569,7 +8569,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "literary-inventory",
+   "id": "unlike-girlfriend",
    "metadata": {},
    "outputs": [
     {
@@ -8692,7 +8692,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "renewable-techno",
+   "id": "relevant-register",
    "metadata": {},
    "outputs": [
     {
@@ -8725,7 +8725,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "elect-mountain",
+   "id": "circular-carnival",
    "metadata": {},
    "source": [
     "## Time series integration (mature neurons)"
@@ -8734,7 +8734,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "negative-telephone",
+   "id": "similar-territory",
    "metadata": {},
    "outputs": [
     {
@@ -8873,7 +8873,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "greatest-customer",
+   "id": "fifth-dallas",
    "metadata": {},
    "outputs": [
     {
@@ -8922,7 +8922,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "stupid-blogger",
+   "id": "working-deputy",
    "metadata": {},
    "outputs": [
     {
@@ -9026,7 +9026,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "positive-cosmetic",
+   "id": "derived-indication",
    "metadata": {},
    "outputs": [
     {
@@ -9067,7 +9067,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "compact-activation",
+   "id": "after-infrared",
    "metadata": {},
    "outputs": [
     {
@@ -9162,7 +9162,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "important-praise",
+   "id": "warming-twelve",
    "metadata": {},
    "outputs": [
     {
@@ -9280,7 +9280,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "alpine-mineral",
+   "id": "toxic-refrigerator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9304,7 +9304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daily-background",
+   "id": "permanent-healthcare",
    "metadata": {},
    "source": [
     "## Time series integration (immature to mature)"
@@ -9313,7 +9313,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "positive-option",
+   "id": "manual-journal",
    "metadata": {},
    "outputs": [
     {
@@ -9452,7 +9452,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "mental-commonwealth",
+   "id": "transsexual-apartment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9466,7 +9466,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "nonprofit-recorder",
+   "id": "extra-devon",
    "metadata": {},
    "outputs": [
     {
@@ -9488,7 +9488,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "unexpected-medicaid",
+   "id": "suburban-sample",
    "metadata": {},
    "outputs": [
     {
@@ -9567,7 +9567,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "sorted-target",
+   "id": "color-literature",
    "metadata": {},
    "outputs": [
     {
@@ -9653,7 +9653,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "nutritional-branch",
+   "id": "metropolitan-diversity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9676,7 +9676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "increased-affairs",
+   "id": "faced-supplement",
    "metadata": {},
    "outputs": [],
    "source": []
