--- a/notebooks/circos_plots.ipynb
+++ b/notebooks/circos_plots.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "17c6aab1-b907-47bb-bcab-08e1141db696",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "badcc381-f73e-43d5-9c24-a1a860cf78f1",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "2301006f-4b0c-4a1a-81c6-1cc57252c907",
    "metadata": {},
    "outputs": [],
@@ -208,12 +208,14 @@
     "            )\n",
     "        )\n",
     "    \n",
-    "    basedata[key] = pd.concat(frames).reset_index(drop = True)"
+    "    df = pd.concat(frames).reset_index(drop = True)\n",
+    "    df.index = df.ID.to_list()\n",
+    "    basedata[key] = df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "bad3dbc9-a1e5-479b-bfe3-a4c48f073ac4",
    "metadata": {},
    "outputs": [
@@ -224,7 +226,7 @@
        "       'lipid metablism', 'nucleoside metabolism'], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "d82bba7f-caf1-43a8-b735-717c8b5506a2",
    "metadata": {},
    "outputs": [
@@ -246,7 +248,7 @@
        "       'lipid metablism', 'nucleoside metabolism'], dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "beda201a-4fa9-442c-9cbf-3e3646ccd785",
    "metadata": {},
    "outputs": [
@@ -451,6 +453,7 @@
     "):\n",
     "    return floor(garclength * (number_of_correlations / total_number_of_correlations))\n",
     "\n",
+    "highlight_metabolites = False\n",
     "\n",
     "for base in ['HILIC', 'RP']:\n",
     "    data = basedata[base]\n",
@@ -501,6 +504,7 @@
     "                total_correlations[groups[0]]\n",
     "            )\n",
     "        for groups, tmpdf in df.groupby(['group1', 'group2']):\n",
+    "            # computing set cardinalities\n",
     "            lengths = {}\n",
     "            for i, group in enumerate(groups):\n",
     "                lengths[f'group{i}'] = len(\n",
